Add source links to problem READMEs and update .gitignore file
In this commit, source links to the corresponding Leetcode problems were added to the README files of four problems for reference purposes. The .gitignore file was also updated to ignore .vscode folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,2 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.out
-*.test
-
-# Go workspace file
-go.work
-
-# IDEs
 .idea
-
-# Allowlist
-!/.gitignore
-!*.go
-!go.sum
-!go.mod
-!README.md
-!*/
+.vscode
