--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,6 +35,14 @@ linters:
   disable-all: true
   # Enable specific linter
   enable:
+    # Enabled by default
+    - errcheck # [1.0] Errcheck is a program for checking for unchecked errors in Go code. These unchecked errors can be critical bugs in some cases.
+    - gosimple # [1.20] Linter for Go source code that specializes in simplifying code.
+    - govet # [1.0] Vet examines Go source code and reports suspicious constructs, such as Printf calls whose arguments do not align with the format string.
+    - ineffassign # [1.0] Detects when assignments to existing variables are not used.
+    - staticcheck # [1.0] It's a set of rules from staticcheck. It's not the same thing as the staticcheck binary. The author of staticcheck doesn't support or approve the use of staticcheck as a library inside golangci-lint.
+    - unused # [1.20] Checks Go code for unused constants, variables, functions and types.
+    # Disabled by default
     - asasalint # [1.47] Check for pass []any as any in variadic func(...any).
     - asciicheck # [1.26] Simple linter to check that your code does not contain non-ASCII identifiers.
     - bidichk # [1.43] Checks for dangerous unicode character sequences.
@@ -48,16 +56,14 @@ linters:
     #    - depguard # [1.4] [gomodguard is more comprehensive] Go linter that checks if package imports are in a list of acceptable packages
     - dogsled  # [1.19] Checks assignments with too many blank identifiers (e.g. x, , , _, := f()).
     - dupl # [1.0] Tool for code clone detection.
-    - dupword # [1.50][AUTOFIX] Checks for duplicate words in the source code.
+    - dupword # [1.50] Checks for duplicate words in the source code.
     - durationcheck # [1.37] Check for two durations multiplied together.
     - err113 # [1.26] Go linter to check the errors handling expressions.
-    - errcheck # [1.0] Errcheck is a program for checking for unchecked errors in Go code. These unchecked errors can be critical bugs in some cases.
     - errchkjson # [1.44] Checks types passed to the json encoding functions. Reports unsupported types and optionally reports occasions, where the check for the returned error can be omitted.
     - errname # [1.42] Checks that sentinel errors are prefixed with the Err and error types are suffixed with the Error.
     - errorlint # [1.32] Errorlint is a linter for that can be used to find code that will cause problems with the error wrapping scheme introduced in Go 1.13.
     - exhaustive # [1.26] Check exhaustiveness of enum switch statements.
     - exhaustruct # [1.46] [generates too many results] Checks if all structure fields are initialized
-    - exportloopref # [1.28] Checks for pointers to enclosing loop variables.
     - fatcontext # [1.58] Detects nested contexts in loops.
     - forbidigo # [1.34] Forbids identifiers.
     - forcetypeassert # [1.38] Finds forced type assertions.
@@ -82,13 +88,10 @@ linters:
     - gomodguard # [1.25] Allow and block list linter for direct Go module dependencies. This is different from depguard where there are different block types for example version constraints and module recommendations.
     - goprintffuncname # [1.23] Checks that printf-like functions are named with f at the end.
     - gosec # [1.0] Inspects source code for security problems.
-    - gosimple # [1.20] Linter for Go source code that specializes in simplifying code.
     - gosmopolitan # [1.53] Report certain i18n/l10n anti-patterns in your Go codebase.
-    - govet # [1.0] Vet examines Go source code and reports suspicious constructs, such as Printf calls whose arguments do not align with the format string.
     - grouper # [1.44] An analyzer to analyze expression groups.
     - importas # [1.38] Enforces consistent import aliases.
     - inamedparam # [1.55] Reports interfaces with unnamed method parameters.
-    - ineffassign # [1.0] Detects when assignments to existing variables are not used.
     - interfacebloat # [1.49] A linter that checks the number of methods inside an interface.
     - intrange # [1.57] Intrange is a linter to find places where for loops could make use of an integer range.
     - ireturn # [1.43] Accept Interfaces, Return Concrete Types.
@@ -121,7 +124,6 @@ linters:
     - sloglint # [1.55] Ensure consistent code style when using log/slog.
     - spancheck # [1.56] Checks for mistakes with OpenTelemetry/Census spans.
     - sqlclosecheck # [1.28] Checks that sql.Rows and sql.Stmt are closed.
-    - staticcheck # [1.0] It's a set of rules from staticcheck. It's not the same thing as the staticcheck binary. The author of staticcheck doesn't support or approve the use of staticcheck as a library inside golangci-lint.
     - stylecheck # [1.20] Stylecheck is a replacement for golint.
     - tagalign # [1.53][AUTOFIX] Check that struct tags are well aligned.
     - tagliatelle # [1.40] Checks the struct tags.
@@ -133,7 +135,6 @@ linters:
     - tparallel # [1.32] Tparallel detects inappropriate usage of t.Parallel() method in your Go test codes.
     - unconvert # [1.0] Remove unnecessary type conversions.
     - unparam # [1.9] Reports unused function parameters.
-    - unused # [1.20] Checks Go code for unused constants, variables, functions and types.
     - usestdlibvars # [1.48] A linter that detect the possibility to use variables/constants from the Go standard library.
     - varnamelen # [1.43] Checks that the length of a variable's name matches its scope.
     - wastedassign # [1.38] Wastedassign finds wasted assignment statements.
@@ -142,6 +143,7 @@ linters:
     - wsl # [1.20] Whitespace Linter - Forces you to use empty lines!.
     - zerologlint # [1.53] Detects the wrong usage of zerolog that a user forgets to dispatch with Send or Msg.
 # DEPRECATED
+#    - exportloopref # [1.28] Checks for pointers to enclosing loop variables.
 #    - deadcode # [1.0] Replaced by unused.
 #    - execinquery # [1.46] Execinquery is a linter about query string checker in Query function which reads your Go src files and warning it finds.
 #    - exhaustivestruct # [1.32] Replaced by exhaustruct.
@@ -157,6 +159,35 @@ linters:
 
 # All available settings of specific linters.
 linters-settings:
+  errcheck:
+    # Report about not checking of errors in type assertions: `a := b.(MyStruct)`. [Default: false]
+    check-type-assertions: true
+    # Report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`. [Default: false]
+    check-blank: true
+    # List of functions to exclude from checking, where each entry is a single function to exclude.
+    exclude-functions:
+      - encoding/json.Marshal
+      - encoding/json.MarshalIndent
+      - github.com/go-playground/validator/v10.(*Validate).Struct
+      - io.Copy(*bytes.Buffer)
+      - io.Copy(os.Stdout)
+      - io/ioutil.ReadFile
+
+  gosimple:
+    # Sxxxx checks in https://staticcheck.io/docs/configuration/options/#checks
+    checks: [ "all" ]
+
+  govet:
+    # Enable all analyzers. [Default: false]
+    enable-all: true
+    disable:
+      # Struct alignment checker.
+      - fieldalignment
+
+  staticcheck:
+    # SAxxxx checks in https://staticcheck.io/docs/configuration/options/#checks [Default: ["*"]]
+    checks: [ "all" ]
+
   copyloopvar:
     # Check all assigning the loop variable to another variable. [Default: false]
     check-alias: true
@@ -172,20 +203,6 @@ linters-settings:
     disable-dec-order-check: false
     # If true, `init` func can be anywhere in file (does not have to be declared before all other functions). [Default: true]
     disable-init-func-first-check: false
-
-  errcheck:
-    # Report about not checking of errors in type assertions: `a := b.(MyStruct)`. [Default: false]
-    check-type-assertions: true
-    # Report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`. [Default: false]
-    check-blank: true
-    # List of functions to exclude from checking, where each entry is a single function to exclude.
-    exclude-functions:
-      - encoding/json.Marshal
-      - encoding/json.MarshalIndent
-      - github.com/go-playground/validator/v10.(*Validate).Struct
-      - io.Copy(*bytes.Buffer)
-      - io.Copy(os.Stdout)
-      - io/ioutil.ReadFile
 
   errchkjson:
     # With check-error-free-encoding set to true, errchkjson does warn about errors
@@ -300,10 +317,6 @@ linters-settings:
             version: "< 1.34.0"
             reason: "This version has a vulnerability"
 
-  gosimple:
-    # Sxxxx checks in https://staticcheck.io/docs/configuration/options/#checks
-    checks: [ "all" ]
-
   gosmopolitan:
     ignore-tests: false
     watch-for-scripts:
@@ -312,13 +325,6 @@ linters-settings:
       - Hangul
       - Hiragana
       - Katakana
-
-  govet:
-    # Enable all analyzers. [Default: false]
-    enable-all: true
-    disable:
-      # Struct alignment checker.
-      - fieldalignment
 
   grouper:
     # Require the use of a single global 'const' declaration only. [Default: false]
@@ -452,10 +458,6 @@ linters-settings:
     no-raw-keys: true
     # Enforce putting arguments on separate lines. [Default: false]
     args-on-sep-lines: true
-
-  staticcheck:
-    # SAxxxx checks in https://staticcheck.io/docs/configuration/options/#checks [Default: ["*"]]
-    checks: [ "all" ]
 
   stylecheck:
     # STxxxx checks in https://staticcheck.io/docs/configuration/options/#checks
