--- a/.golangci.yml
+++ b/.golangci.yml
@@ -101,7 +101,7 @@ linters:
     - makezero # [1.34] Finds slice declarations with non-zero initial length.
     - mirror # [1.53][AUTOFIX] Reports wrong mirror patterns of bytes/strings usage.
     - misspell # [1.8][AUTOFIX] Finds commonly misspelled English words in comments.
-    - mnd # [1.22] An analyzer to detect magic numbers.
+    # - mnd # [1.22] An analyzer to detect magic numbers.
     - musttag # [1.51] Enforce field tags in (un)marshaled structs.
     - nakedret # [1.19] Finds naked returns in functions greater than a specified function length.
     - nestif # [1.25] Reports deeply nested if statements.
@@ -562,13 +562,8 @@ linters-settings:
     # Ignore "ok" variables that hold the bool return value of a channel receive. [Default: false]
     ignore-chan-recv-ok: true
     # Optional list of variable names that should be ignored completely. [Default: []]
-    ignore-names:
-      - ch
-      - err
-      - tc
-      - tt
-      - id
-      - tx # db transaction
+    #ignore-names:
+    #  - ch
     # Optional list of variable declarations that should be ignored completely.
     # Entries must be in one of the following forms (see below for examples):
     # - for variables, parameters, named return values, method receivers, or type parameters:
@@ -579,9 +574,7 @@ linters-settings:
     ignore-decls:
       - err error
       - i int
-      - r *http.Request
-      - w http.ResponseWriter
-      - wg sync.WaitGroup
+      - k int
 
   whitespace:
     # Enforces newlines (or comments) after every multi-line if statement. [Default: false]
