--- a/.golangci.yml
+++ b/.golangci.yml
@@ -84,7 +84,7 @@ linters:
     # - exhaustruct # [1.46] [generates too many results] Checks if all structure fields are initialized
     - exptostd # [1.63][AUTOFIX] Detects functions from golang.org/x/exp/ that can be replaced by std functions.
     - fatcontext # [1.58][AUTOFIX] Detects nested contexts in loops and function literals.
-    - forbidigo # [1.34] Forbids identifiers.
+    # - forbidigo # [1.34] Forbids identifiers.
     - forcetypeassert # [1.38] Finds forced type assertions.
     - funlen # [1.18] Tool for detection of long functions.
     - gci # [1.30][AUTOFIX] Gci controls Go package import order and makes it always deterministic.
