`fix(merge_sorted_array): correct copy behavior and improve control flow`
Moved the `copy` operation inside the default case with an immediate return to fix incorrect behavior. Updated `.golangci.yml` to allow additional short variable names (`n` and `m`).

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -606,6 +606,8 @@ linters-settings:
       - i int
       - j int
       - k int
+      - n int
+      - m int
       - ok bool
       - r *http.Request
       - w http.ResponseWriter
